let mst default has pe

--- a/scripts/MST/conf.ini
+++ b/scripts/MST/conf.ini
@@ -7,8 +7,8 @@ THREADS=8
 ###############################################################################
 # Toos settings 
 #
-EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
-DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/MST"
+EXEC_DIR="/home/softwares/stLFR_Assembler/bin"
+DATA="/home/softwares/stLFR_Assembler/scripts/Scaffold"
 BWA_DIR="/share/app/bwa-0.7.12"
 
 ###############################################################################
@@ -19,7 +19,7 @@ BWA_DIR="/share/app/bwa-0.7.12"
 #
 R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
 R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
-SOAP_DIR="/home/guolidong/stLFR/new_chr19/chr19/standard_soap2_k48_09_03_11_35_24"
+SOAP_DIR="/home/guolidong/test"
 SOAP_K=63
 PREFIX="chr19_soap2"
 
@@ -27,23 +27,36 @@ PREFIX="chr19_soap2"
 # Control parameter settings 
 #
 
+###################################################
+# for step 1 bwa mem
 BWA_K=53
-# please make sure that SEED_MIN >= MST_BIN_SIZE
-MST_SEED_MIN=3200
-MST_BIN_SIZE=3200
-# normally you don't need change the cluster value.
-# use 0.01 is good enough.
-MST_CLUSTER=0.01
-MST_BIN_CLUSTER=0.01
 
+###################################################
+# for step 2 order
+MST_BIN_SIZE=3200
+MST_BIN_CLUSTER=0.01
+MST_CLUSTER=0.1
+
+###################################################
+# for step 3 orientation
 # please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
 HT_BIN_SIZE=1600
 HT_BIN_CLUSTER=0.01
 RANK=4
 
 ###################################################
+# for step 4 pe_fill
+# please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
+MAX_INSERT_SIZE=1000
+PE_SEED_MIN=235
+PE_SEARCH_MAX=5000
+PE_MIN_JOINBARCODES=10
+PE_MIN_COUNT=3
+PE_FILL=5
+
+###################################################
 # parameters for generate sequence 
 #
 MIN_SCONTIG=300
-MIN_N=1
+MIN_N=10
 MIN_C=1
