add step 5 gap_size

--- a/scripts/Scaffold/conf.ini
+++ b/scripts/Scaffold/conf.ini
@@ -53,9 +53,12 @@ PE_SEARCH_MAX=5000
 PE_MIN_JOINBARCODES=10
 PE_MIN_COUNT=3
 PE_FILL=5
+###################################################
+# for step 4 gap_size
+GAP_BIN_SIZE=1600
 
 ###################################################
-# parameters for generate sequence 
+# for step 6 .parameters for generate sequence 
 #
 MIN_SCONTIG=300
 MIN_N=10
