--- a/scripts/Scaffold/conf.ini
+++ b/scripts/Scaffold/conf.ini
@@ -7,8 +7,7 @@ THREADS=8
 ###############################################################################
 # Toos settings 
 #
-EXEC_DIR="/home/softwares/stLFR_Assembler/bin"
-DATA="/home/softwares/stLFR_Assembler/scripts/Scaffold"
+STLFR_ASSEMBLER_DIR="/home/softwares/stLFR_Assembler/"
 BWA_DIR="/share/app/bwa-0.7.12"
 
 ###############################################################################
@@ -17,8 +16,10 @@ BWA_DIR="/share/app/bwa-0.7.12"
 #   MAKE SURE ALL PATH ARE ABSOLUTELY PATH.
 #   DO NOT USE "../"  "~/" "./" !!!
 #
+## for input stLFR reads
 R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
 R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
+## for input contig
 SOAP_DIR="/home/guolidong/test"
 SOAP_K=63
 PREFIX="chr19_soap2"
@@ -54,7 +55,7 @@ PE_MIN_JOINBARCODES=10
 PE_MIN_COUNT=3
 PE_FILL=5
 ###################################################
-# for step 4 gap_size
+# for step 5 gap_size
 GAP_BIN_SIZE=4000
 
 ###################################################
