--- a/src/main_src_developer_tools/Makefile
+++ b/src/main_src_developer_tools/Makefile
@@ -47,8 +47,7 @@ source_o		= ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs = BarcodeDepth bin_ref cpSpeed FakeRef2Scaff gapfillerIDY GenSentieonScaff IDYtool IDYtool_paf Cluster2MST2DOT
-
+jobs = BarcodeDepth bin_ref cpSpeed FakeRef2Scaff gapfillerIDY GenSentieonScaff IDYtool IDYtool_paf Cluster2MST2DOT Points4GapSize
 
 all :  ${jobs}
 
@@ -134,7 +133,16 @@ Cluster2MST2DOT : clean ${Cluster2MST2DOT_o} ${source_o} ../dev_bin
 	mv $@ ../dev_bin/
 
 
-jobs_o=  ${BarcodeDepth_o} ${bin_ref_o} ${cpSpeed_o} ${FakeRef2Scaff_o} ${gapfillerIDY_o} ${GenSentieonScaff_o} ${IDYtool_o} ${IDYtool_paf_o} ${Cluster2MST2DOT_o}
+
+
+Points4GapSize_cpp = Points4GapSize.cpp
+Points4GapSize_o = Points4GapSize.o
+Points4GapSize : clean ${Points4GapSize_o} ${source_o} ../dev_bin
+	${CXX} ${Points4GapSize_o} ${source_o} ${DEUBG_CXX} -o Points4GapSize
+	mv $@ ../dev_bin/
+
+
+jobs_o=  ${BarcodeDepth_o} ${bin_ref_o} ${cpSpeed_o} ${FakeRef2Scaff_o} ${gapfillerIDY_o} ${GenSentieonScaff_o} ${IDYtool_o} ${IDYtool_paf_o} ${Cluster2MST2DOT_o} ${Points4GapSize_o}
 
 dirty	   =${jobs_o} ${jobs} ${source_o}
 
