--- a/scripts/scaffold/conf.ini
+++ b/scripts/scaffold/conf.ini
@@ -1,14 +1,14 @@
 ###############################################################################
 # Project Settings.
 #
-PROJECT_NAME="pipetest"
-THREADS=8
+PROJECT_NAME="work_dir"      #name of work dirctory
+THREADS=15                   #num of threads
 
 ###############################################################################
 # Toos settings 
 #
-STLFR_ASSEMBLER_DIR="/home/softwares/stLFR_Assembler/"
-BWA_DIR="/share/app/bwa-0.7.12"
+STLFR_ASSEMBLER_DIR=YOUR-INTALL-DIR         # stLFR Scaffold Assembler installation directory 
+BWA_DIR=YOUR-BWA-DIR                        # BWA installation directory
 
 ###############################################################################
 # Input data settings
@@ -17,12 +17,12 @@ BWA_DIR="/share/app/bwa-0.7.12"
 #   DO NOT USE "../"  "~/" "./" !!!
 #
 ## for input stLFR reads
-R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
-R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
+R1="/home/chr19/chr19_reads1.fq.clean.gz"   # the read1 of stLFR reads
+R2="/home/chr19/chr19_reads2.fq.clean.gz"   # the read2 of stLFR reads
 ## for input contig
-SOAP_DIR="/home/guolidong/test"
-SOAP_K=63
-PREFIX="chr19_soap2"
+SOAP_DIR="/home/soap_contig"                # the input contigs directory
+SOAP_K=63                                   # the used-k-value of SOAPdenovo. If contigs are not generated using SOAPdenovo, then keep it as 63. 
+PREFIX="chr19_soap2"                        # the prefix of you contig/ContigIndex
 
 ###############################################################################
 # Control parameter settings 
@@ -30,37 +30,36 @@ PREFIX="chr19_soap2"
 
 ###################################################
 # for step 1 bwa mem
-BWA_K=53
+BWA_K=53                                    # the mapping k-value for bwa
 
 ###################################################
 # for step 2 order
-MST_BIN_SIZE=7000
-MST_BIN_CLUSTER=0.1
-MST_CLUSTER=0.1
+MST_BIN_SIZE=7000                           # the unit bin size for order.
+MST_BIN_CLUSTER=0.1                         # the bin cluster threshold for order.
+MST_CLUSTER=0.1                             # the order detect threshold.
 
 ###################################################
 # for step 3 orientation
-# please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
-HT_BIN_SIZE=3500
-HT_BIN_CLUSTER=0.05
-RANK=4
+HT_BIN_SIZE=3500                            # the unit bin size for orientation.
+HT_BIN_CLUSTER=0.1                          # the bin cluster threshold for orientation.
+RANK=4                                      # the orientaion detect rank.
 
 ###################################################
 # for step 4 pe_fill
 # please make sure that SEED_MIN >= HT_BIN_SIZE * 2 
-MAX_INSERT_SIZE=5000
-PE_SEED_MIN=1000
-PE_SEARCH_MAX=5000
-PE_MIN_JOINBARCODES=10
-PE_MIN_COUNT=3
-PE_FILL=5
+MAX_INSERT_SIZE=5000                        # the max allowed insert size.
+PE_SEED_MIN=1000                            # the min contig size to fill.
+PE_SEARCH_MAX=5000                          # the max search length before stop.
+PE_MIN_JOINBARCODES=10                      # the min joint barcode count.
+PE_MIN_COUNT=3                              # the min joint PE count.
+PE_FILL=5                                   # the N size between PE-joint contigs.
 ###################################################
 # for step 5 gap_size
-GAP_BIN_SIZE=4000
+GAP_BIN_SIZE=4000                           # the unit bin size for gap
 
 ###################################################
-# for step 6 .parameters for generate sequence 
+# for step 6 parameters for generate sequence 
 #
-MIN_SCONTIG=300
-MIN_N=10
-MIN_C=1
+MIN_SCONTIG=300                             # the min sequence length that allows to write into the final scaffolds.
+MIN_N=10                                    # the min N size between 2 gapped contigs.
+MIN_C=1                                     # the min N size between 2 overlaped contigs.
