--- a/src/main_src_developer_tools/Makefile
+++ b/src/main_src_developer_tools/Makefile
@@ -46,7 +46,7 @@ source_o		= ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs = barcode2scaffold BarcodeDepth bin_ref cpSpeed MST_only MST_ideal MST_dbranchnode MST_analysis FakeRef2Scaff gapfillerIDY GenSentieonScaff GenBinSimMatrix IDYtool IDYtool_paf Cluster2MST2DOT ContigSimAnalysis Points4GapSize filterPairFQ
+jobs = barcode2scaffold BarcodeDepth bin_ref cpSpeed MST_only MST_ideal MST_dbranchnode MST_analysis FakeRef2Scaff gapfillerIDY GenSentieonScaff GenBinSimMatrix IDYtool IDYtool_paf Cluster2MST2DOT ContigSimAnalysis Points4GapSize Order_ideal filterPairFQ
 
 all :  ${jobs}
 
@@ -206,6 +206,15 @@ Points4GapSize : clean ${Points4GapSize_o} ${source_o} ../dev_bin
 
 
 
+Order_ideal_cpp = Order_ideal.cpp
+Order_ideal_o = Order_ideal.o
+Order_ideal : clean ${Order_ideal_o} ${source_o} ../dev_bin
+	${CXX} ${Order_ideal_o} ${source_o} ${DEUBG_CXX} -o Order_ideal
+	mv $@ ../dev_bin/
+
+
+
+
 filterPairFQ_cpp = filterPairFQ.cpp
 filterPairFQ_o = filterPairFQ.o
 filterPairFQ : clean ${filterPairFQ_o} ${source_o} ../dev_bin
@@ -213,7 +222,7 @@ filterPairFQ : clean ${filterPairFQ_o} ${source_o} ../dev_bin
 	mv $@ ../dev_bin/
 
 
-jobs_o=  ${barcode2scaffold_o} ${BarcodeDepth_o} ${bin_ref_o} ${cpSpeed_o} ${MST_only_o} ${MST_ideal_o} ${MST_dbranchnode_o} ${MST_analysis_o} ${FakeRef2Scaff_o} ${gapfillerIDY_o} ${GenSentieonScaff_o} ${GenBinSimMatrix_o} ${IDYtool_o} ${IDYtool_paf_o} ${Cluster2MST2DOT_o} ${ContigSimAnalysis_o} ${Points4GapSize_o} ${filterPairFQ_o}
+jobs_o=  ${barcode2scaffold_o} ${BarcodeDepth_o} ${bin_ref_o} ${cpSpeed_o} ${MST_only_o} ${MST_ideal_o} ${MST_dbranchnode_o} ${MST_analysis_o} ${FakeRef2Scaff_o} ${gapfillerIDY_o} ${GenSentieonScaff_o} ${GenBinSimMatrix_o} ${IDYtool_o} ${IDYtool_paf_o} ${Cluster2MST2DOT_o} ${ContigSimAnalysis_o} ${Points4GapSize_o} ${Order_ideal_o} ${filterPairFQ_o}
 
 dirty	   =${jobs_o} ${jobs} ${source_o}
 
