add minhash setting into configure

--- a/scripts/scaffold/conf.ini
+++ b/scripts/scaffold/conf.ini
@@ -27,7 +27,7 @@ PREFIX="chr19_soap2"                        # the prefix of you contig/ContigInd
 ###############################################################################
 # Control parameter settings 
 #
-
+SAMPLING_RATIO=1.0                          # random sample barcode to reduce clusting time. valid value : [0.1,1.0]
 ###################################################
 # for step 1 bwa mem
 BWA_K=53                                    # the mapping k-value for bwa
